--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,13 +5,23 @@
 
 body {
     background-color: #f6f8fc;
+    text-decoration: none;
 }
+
+/* body button {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+} */
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+
 }
 
 @media screen and (min-width: 992px) {
