--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,17 +1,31 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    color: brown;
+    font-size: large;
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color:  #494a4d; 
+    background-size: auto;
+    background-image: url(/Pictures/Background.jpg);
+
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    
+}
+
+h1{
+    text-align: center;
+    background-color: rgba(173, 86, 80, 0.678);
+    box-sizing: border-box;
+    border-radius: 1rem;
+    font-style: italic;
+    color:  yellow;
 }
 
 @media screen and (min-width: 992px) {
