--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,8 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    list-style: none;
+    box-shadow: none;
 }
 
 .pokemon .number {
@@ -95,8 +97,10 @@
 
 .pokemon .name {
     text-transform: capitalize;
-    color: #fff;
+    color:  rgb(67, 36, 36);
     margin-bottom: .25rem;
+    text-align: left;
+    
 }
 
 .pokemon .detail {
@@ -120,6 +124,31 @@
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+}
+
+h4 {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(67, 36, 36);
+    text-transform: capitalize;
+    margin-bottom: 3px;
+    margin-top: 5px;
+}
+
+.ability {
+    color: white;
+    list-style: none;
+    font-size: 10px;
+    margin-left: auto;
+    padding: 0;
+
+}
+
+.stat {
+    list-style: none;
+    color: white;
+    font-size: 10px;
+    margin-left: -30px;
+    padding: 0;
 }
 
 .pokemon .detail img {
