--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'sans-serif';
     box-sizing: border-box;
 }
 
@@ -11,13 +11,13 @@ body {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #fff;  
 }
 
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
-        height: auto;
+        height: auto; 
         margin: 1rem auto;
         border-radius: 1rem;
     }
