--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,8 +1,8 @@
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -83,7 +83,7 @@
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: 1rem;  
 }
 
 .pokemon .number {
@@ -94,9 +94,9 @@
 }
 
 .pokemon .name {
-    text-transform: capitalize;
     color: #fff;
-    margin-bottom: .25rem;
+    margin-bottom: 0;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
@@ -115,16 +115,16 @@
 .pokemon .detail .types .type {
     color: #fff;
     padding: .25rem .5rem;
-    margin: .25rem 0;
+    margin: .25rem .25rem;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
     text-align: center;
+    filter: brightness(1.1);
 }
 
 .pokemon .detail img {
     max-width: 100%;
-    height: 70px;
+    height: 95px;
 }
 
 .pagination {
@@ -140,26 +140,27 @@
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
-    color: #fff;
+    color:#000;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+   
 }
 
 @media screen and (min-width: 380px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;   
     }
 }
 
 @media screen and (min-width: 576px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;   
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;  
     }
 }
