--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,10 +1,81 @@
+@charset "UTF-8";
 .pokemons {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     margin: 0;
     padding: 0;
     list-style: none;
 }
+
+.pokemon{
+    padding: 1rem;
+    margin: 0.5rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.pokemon .name{
+    text-transform: capitalize;
+    color: #fff;
+    margin-bottom: .25rem;
+}
+
+.pokemon .number{
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: .625rem;
+}
+
+.pokemon .detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: apace-between;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
+
+.pokemon .detail .types{
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+
+.pokemon .detail .types .type{
+    color: red;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+
+}
+
+.pokemon .detail img{
+    max-width: 100%;
+    height: 70px;
+}
+
 
 .normal {
     background-color: #a6a877;
