--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,23 +2,38 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
-
-body {
-    background-color: #f6f8fc;
+body{
+    background-color: #c9d1e1;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: white;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
+a {
+    text-decoration: none;
+}
+
+@media screen and (min-widt: 992px) {
+    .content{
         max-width: 992px;
         height: auto;
         margin: 1rem auto;
         border-radius: 1rem;
     }
+    .contentDetails{
+        width: 30vw;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }    
+}
+
+.contentDetails {
+    width: 30vw;
+    height: 100vh;
+    padding: 1rem;
 }
