--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,8 +1,8 @@
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -78,25 +78,26 @@
     background-color: #f9aec7;
 }
 
+
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
 }
 
 .pokemon .number {
-    color: #000;
-    opacity: .3;
+    color: black;
+    opacity: 0.1;
     text-align: right;
-    font-size: .625rem;
+    font-size: 0.625rem;
 }
 
-.pokemon .name {
+.pokemon .name{
     text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+    color: white;
+    margin-bottom: 0.25rem;
 }
 
 .pokemon .detail {
@@ -113,19 +114,146 @@
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
+    color: white;
+    padding: 0.25rem 0.5rem;
+    margin: 0.25rem 0;
+    font-size: 0.625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
 }
 
-.pokemon .detail img {
+.pokemon .detail img{
     max-width: 100%;
     height: 70px;
 }
+
+.block {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.block .pokemonStatus {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-around;
+    margin: 0.5rem;
+    padding: 0rem 1rem;
+    border-radius: 1rem;
+}
+
+.block .pokemonStatus .topBlock{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;    
+    padding: 1rem 0;
+    height: 2.5rem;
+}
+
+.block .pokemonStatus .topBlock .favorite {
+    color: white;
+    font-size: 1.25rem;
+}
+
+.block .pokemonStatus .topBlock .back{
+    color: white;
+    margin-right: 0;
+    font-size: 1rem;
+    padding: 0 0.5rem 0.5rem 0;
+}
+
+.block .pokemonStatus .middleBlock {
+    display: flex;
+    flex-direction: column;
+}
+
+.block .pokemonStatus .middleBlock .name{
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    color: white;
+    margin-bottom: 0.25rem;
+}
+
+.block .pokemonStatus .middleBlock .numberPokemon {
+    color: white;
+    text-align: right;
+    font-size: 0.625rem;
+    border: 0;
+    margin: 0;
+}
+
+.block .pokemonStatus .middleBlock .detailPokemon {
+    display: flex;
+    flex-direction: column;
+    border: 0;
+}
+
+.block .pokemonStatus .middleBlock .detailPokemon .typesPokemon {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+
+.block .pokemonStatus .middleBlock .detailPokemon .typesPokemon .typePokemon {
+    color: white;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.625rem;
+    border-radius: 1rem;
+    text-align: center;
+    background: #ffffff2b;
+}
+
+.block .pokemonStatus .middleBlock .imagemInvertida{
+    transform: scaleX(-1);
+    max-width: 100%;
+    height: 100px;
+}
+
+.block .block2 {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: flex-start;
+    border-radius: 1rem;
+    margin: -2.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.block .block2 .lowerStatus{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    padding: 2rem 1rem;
+    list-style-position: outside;
+}
+
+.block .block2 .lowerStatus .about {
+    font-size: 0.625rem;
+    font-weight: 700;
+}
+
+.block .block2 .lowerStatus .block3{
+    display: flex;
+    flex-direction: column;
+    margin-left: -4.25rem;
+    list-style-position: outside;
+}
+
+.block .block2 .lowerStatus .block3 .olStatus {
+    list-style: none;
+    font-size: 0.625rem;
+    margin-left: -2.5rem;
+    list-style-position: outside;
+    color: #808080;
+}
+
+.block .block2 .lowerStatus .block3 .resp {
+    color: black;
+    text-transform: capitalize;
+} 
 
 .pagination {
     display: flex;
@@ -146,20 +274,30 @@
     border-radius: 1rem;
 }
 
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
+@media screen and (min-width: 330px) {
+    .pokemons{
+        grid-template-columns: 1fr 1fr ;
     }
+    .block {
+        grid-template-columns: 1fr;
+    }
+
 }
 
 @media screen and (min-width: 576px) {
-    .pokemons {
+    .pokemons{
         grid-template-columns: 1fr 1fr 1fr;
+    }
+    .block {
+        grid-template-columns: 1fr;
     }
 }
 
 @media screen and (min-width: 992px) {
-    .pokemons {
+    .pokemons{
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .block {
+        grid-template-columns: 1fr;
     }
 }
