--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,183 @@
 * {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #f6f8fc;
+  background-color: #f6f8fc;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
-    background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+  background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+  .content {
+    max-width: 992px;
+    height: auto;
+    margin: 1rem auto;
+    border-radius: 1rem;
+  }
+}
+
+#customModal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0px;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.3s ease-in-out;
+  z-index: 9;
+  min-width: 250px;
+}
+
+.modal-header {
+  padding: 50px 20px;
+  border-radius: 20px 20px 0 0;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-header i {
+  font-size: 20px;
+  color: #fff;
+}
+
+.close {
+  position: absolute;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.name {
+  text-transform: capitalize;
+  color: #fff;
+  margin-bottom: 0.25rem;
+  font-weight: normal;
+}
+.type {
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  font-size: 10px;
+  border-radius: 1rem;
+  filter: brightness(1.1);
+  text-align: center;
+}
+
+#customModal ol {
+  list-style: none;
+  padding-left: 0;
+  justify-content: flex-start;
+  gap: 5px;
+  margin-top: 0;
+}
+
+#customModal ol li {
+  box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
+  font-size: 13px;
+  padding: 5px 15px;
+}
+
+#customModal .detail {
+  font-size: 14px;
+  color: #fff;
+}
+
+.image-box {
+  display: flex;
+  justify-content: center;
+  margin-bottom: -60px;
+  margin-top: 20px;
+}
+
+.image-box img {
+  height: 120px;
+  width: auto;
+}
+
+.modal-content {
+  padding: 25px 20px;
+  border-radius: 20px;
+  background: #fff;
+  margin-top: -15px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+}
+
+h3 {
+  font-size: 16px;
+}
+
+.modal-content .flex {
+  margin-bottom: 15px;
+}
+
+.modal-content .label {
+  font-size: 14px;
+  color: #666;
+  width: 80px;
+}
+
+.modal-content .flex {
+  justify-content: flex-start;
+}
+
+.modal-content .typ {
+  display: flex;
+}
+
+.modal-content .name {
+  color: #000;
+}
+
+.modal-content .type {
+  color: #000;
+  padding: 0 5px;
+  margin: 0px;
+  font-size: 16px;
+  border-radius: none;
+  filter: none;
+  list-style: none;
+}
+
+.modal-content .typ li {
+  background: #fff !important;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    margin-top: 30px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
