--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,132 +1,84 @@
+@import "pokeColors.css";
+.head {
+    padding: 0 5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    gap: 2rem;
+    background: #df3636;
+    border-bottom: .5rem solid rgb(100, 8, 8);
+}
+.circle img {
+    max-width: 100%;
+    height: 5rem;
+}
+#title {
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: 'Titillium Web', sans-serif;
+}
+.detail img {
+    max-width: 70%;
+    height: 8rem;
+}
 .pokemons {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     margin: 0;
     padding: 0;
     list-style: none;
 }
-
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
 .pokemon {
     display: flex;
     flex-direction: column;
+    border-radius: 1rem;
     margin: .5rem;
     padding: 1rem;
-    border-radius: 1rem;
+    border: 3px solid rgba(255, 255, 255, 0.5);
 }
-
+@keyframes expand {
+    from {}
+    to {
+        transform: scale(101%);
+    }
+}
+.pokemon:hover {
+    animation: 50ms ease-in-out expand;
+    transform: scale(102%);
+}
 .pokemon .number {
-    color: #000;
+    text-align: left;
+    font-size: 1rem;
     opacity: .3;
-    text-align: right;
-    font-size: .625rem;
 }
-
 .pokemon .name {
+    text-align: left;
     text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
 }
-
 .pokemon .detail {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-
 .pokemon .detail .types {
+    list-style: none;
     padding: 0;
     margin: 0;
-    list-style: none;
 }
-
 .pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
-    filter: brightness(1.1);
+    font-size: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
     text-align: center;
+    filter: brightness(1.2);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 1);
 }
-
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
 .pagination {
     display: flex;
     flex-direction: row;
@@ -135,31 +87,22 @@
     width: 100%;
     padding: 1rem;
 }
-
 .pagination button {
-    padding: .25rem .5rem;
+    padding: .25rem 1rem;
     margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+    font-size: 1.5rem;
+    background-color: rgb(5, 30, 255, .5);
+    border: 3px solid rgba(255, 255, 255, .75);
+    border-radius: 20px;
 }
-
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
-    }
+.pagination button:hover {
+    transform: scale(102%);
+    cursor: pointer;
 }
-
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+footer {
+    background-color: #ddd;
+    margin-bottom: 0;
+    padding: 1rem;
+    text-align: center;
+    font-size: 1rem;
 }
